Re-upload: Complete Auth Module and Backend Structure